--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
             margin: 0;
         }
 
+        html, body {
+            width:100%;
+            height: 100%;
+        }
+
         iframe {
             position: absolute;
             top: 0;
